*Empty MediaWiki Message*

--- a/Комияс.mw
+++ b/Комияс.mw
@@ -10,21 +10,21 @@
  | related   = [[Удмуртъяс]]
 }}
 
-'''Комияс''' (''Коми морт, Коми войтыр/отир'') тайӧ Финн-йӧгра войтыр.
+'''Комияс''' (''Коми морт, Коми войтыр / отир'') тайӧ финн-йӧгра войтыр.
 == Лыд ==
 [[Изображение:Komijas muserpas.jpg|thumb|300px|Коми войтырлӧн мусерпасыс]]
-2002 воын [[Рочму|Рочмуын]] - 418 641 морт, [[Украина]]ын - 1545 (2002).
+[[2002]] воын [[Рочму|Рочмуын]] – 418 641 морт, [[Украина]]ын – 1545.
 
 == Антропология ==
 [[Изображение:Komijas.jpg|thumb|300px|left|Комияс]]
 
 == Важвылӧм ==
 === Археология культураяс ===
-* [[Чужьяёльса культура]] (посл. четв. IV тыс.-1-я четв. II тыс. до н.э.)
-* [[Ананьиноса культура]] (м.э. VIII-III нн.)
-* [[Гляденовоса культура]] (м.э. III н.-IV н.)
-* [[Ломоватовоса культура]] (IV-IX нн.)
-* [[Родановоса культура]] (IX-XI нн.)
+* [[Чужьяёльса культура]] (миян эраса IV сюрс волӧн бӧръя четвертьыс – миян эраса II сюрс волӧн 1-дза четверть)
+* [[Ананьиноса культура]] (миян эраса VIII–III нэмъяс)
+* [[Гляденовоса культура]] (миян эраса III–IV нэмъяс)
+* [[Ломоватовоса культура]] (IV–IX нэмъяс)
+* [[Родановоса культура]] (IX–XI нэмъяс)
 
 == Субэтносъяс ==
 * [[Коми-Зыряна]]
@@ -32,10 +32,12 @@
 * [[Коми-Ёдзякъяс]]
 
 == Коми вына йӧз ==
-* [[Леонтьев Як Валер]]
-* [[Сметанина Петыр Раиса]]
-* [[Сорокин Ӧльӧксан Питирим]]
-* [[Распутин Япим Гриш]]
+* [[Перымса Стефан]]
+* [[Распутин Григорий Ефимович]]
+* [[Жаков Пальӧ Кальӧ]]
+* [[Сорокин Питирим Александрович]]
+* [[Сметанина Раиса Петровна]]
+* [[Леонтьев Валерий Яковлевич]]
 
 == Видзӧдӧй тшӧтш ==
 * [[Комияслӧн лыддьӧгныс]]
