--- a/Оренбург_обласьт.mw
+++ b/Оренбург_обласьт.mw
@@ -30,7 +30,7 @@
   |Место по населению             = 24
   |Олысь лыд                      = 17,0
   |Место по плотности             = 
-  |Национал состав                = 
+  |Национал состав                = рочъяс, тотараяс, башкиръяс, казахъяс
   |Конфессионал состав            = Православие
 |Мутас                            = 123 700 
   |Процент от площади             = Ва-0,1
@@ -56,7 +56,7 @@
 |Примечания                       = 
 }}
 
-'''Оренбург обласьт''' тайӧ регион [[Рочму|Рочмуын]].
+'''Оренбург обласьт''' ({{lang-ru|Оренбургская область}}) тайӧ регион [[Рочму|Рочмуын]]. Юркарыс [[Оренбург]].
 
 {{Регионъяс Рочмуын}}
 {{Оренбург обласьтлӧн каръясыс}}
