Отмена правки 84384, сделанной участником [[Special:Contributions/Dato - 100|Dato - 100]] ([[User talk:Dato - 100|обс.]])

--- a/Чреба.mw
+++ b/Чреба.mw
@@ -1,5 +1,5 @@
 {{Кар-сикт
-|Рӧм                     = Грузия
+|Рӧм                     = Лунвыв Осетия
 |Коми ним                = Цхинвал
 |Оригинал ним            = Чъреба
 |Канпас                  = Coat of arms of Tskhinval.gif
