Отмена правки 84386, сделанной участником [[Special:Contributions/Dato - 100|Dato - 100]] ([[User talk:Dato - 100|обс.]])

--- a/Чреба.mw
+++ b/Чреба.mw
@@ -4,7 +4,7 @@
 |Оригинал ним            = Чъреба
 |Канпас                  = Coat of arms of Tskhinval.gif
 |Дӧрапас                 = 
-|Му                      = [[Грузия]]
+|Му                      = [[Лунвыв Осетия]]
 |Статус                  = юркар
 |Район ним               =  
 |Регион ним              =  
@@ -25,7 +25,7 @@
 |Средняя высота          = 
 |Минимальная высота      = 
 |Климат                  = 
-|Кыв                     = [[Осетин кыв|осетин]], [[Грузин кыв|Грузин]]
+|Кыв                     = [[Осетин кыв|осетин]], [[Роч кыв|роч]]
 |Кывъяс                  = 
 |Олысьяс                 = 20 000
  |Перепись во            = 2008
