r2.7.2) (робот содтi: [[sh:Chhattisgarhi]]

--- a/Чхаттисгархи.mw
+++ b/Чхаттисгархи.mw
@@ -21,6 +21,7 @@
 [[pl:Język ćhattisgarhi]]
 [[pms:Lenga chhattisgarhi]]
 [[ru:Чхаттисгархи]]
+[[sh:Chhattisgarhi]]
 [[ta:சத்திசுகரி மொழி]]
 [[th:ภาษาฉัตติสครห์]]
 [[vi:Tiếng Chhattisgarh]]
