--- a/Горчаков_Гений_Дмитриевич.mw
+++ b/Горчаков_Гений_Дмитриевич.mw
@@ -63,6 +63,7 @@
 * [http://www.nbrkomi.ru/kk/sysolsky/literatura/g1 Национальнöй библиотекалöн сайт]
 * [http://finugor.ru:8080/node/2715 Мамонтова Н. Олöм радейтысь морт // [[Йӧлӧга (газет)|Йöлöга]], [[2007]]. Рака тöлысь 9-öд лун].
 
-
+[[Категория:Персоналия анбурӧд]]
 [[Категория:Персоналия:Коми]]
+[[Категория:Коми гижысь]]
 [[Категория:Коми ворсысьяс]]
