*Empty MediaWiki Message*

--- a/Рассыхаев_Василий_Николаевич.mw
+++ b/Рассыхаев_Василий_Николаевич.mw
@@ -2,12 +2,11 @@
 [[Файл:Рассыхаев В.Н. 2.jpg|250 px|right|thumb|Коми гижысь Егор Рочевлӧн «Сöстöм ёльяс», ворсöны Василий Рассыхаев да Михаил Красильников]]
 [[Файл:Рассыхаев В.Н. 3.jpg|250 px|right|thumb|Рассыхаев Василий Николаевич (1922–1990) – коми актёр]]
 
-'''Рассыхаев Василий Николаевич''' (комиӧн – '''Микол Вась''') ([[1922]] – [[1990]]) – коми актёр, Коми АССР-са народнöй артист ([[1971]]).
+'''Рассыхаев Василий Николаевич''' (комиӧн – '''Микол Вась''') ([[1922]] – [[1990]]) – коми актёр, [[Коми АССР-са народнӧй артист]] ([[1971]]).
 
 ==Олан туй==
-* [[1922]], [[20 моз|моз 20 лун]] – чужис [[Кулӧмдiн]] сиктын.
+* [[1922]], [[20 моз|моз 20 лун]] – чужис [[Кулӧмдiн]] [[сикт]]ын.
 * [[1942]] – помалiс ГИТИС-лысь Коми студия да пырис уджавны [[Коми Республикаса Драма театр]]ö.
-* [[1971]] – сетісны [[Коми АССР-са народнöй артист]] ним.
 * [[1990]], [[19 вӧльгым|вӧльгым 19 лун]] – кувсис [[Сыктывкар]]ын.
 
 ==Рольяс==
@@ -19,13 +18,16 @@
 В.Н. Рассыхаевлöн творчествоыс пуктiс ыджыд пай коми национальнöй ворсан искусство сöвмöдöмö.
 
 '''Василий Рассыхаев''' ворсiс сiдзжö татшöм рольяс:
-* Сергей Гуляев ([[Дьяковной Николай Дмитриевич|Николай Дьяконовлöн]] да Степан Ермолинлöн «Домна Каликова», [[1943]]).
+* Сергей Гуляев ([[Дьяконов Николай Михайлович|Николай Дьяконовлöн]] да Степан Ермолинлöн «Домна Каликова», [[1943]]).
 * Петя Соколов ([[Ермолин Степан Иванович|Степан Ермолинлöн]] «Молодые патриоты», [[1946]]).
 * Соснин ([[Фёдоров Геннадий Александрович|Геннадий Фёдоровлöн]] «В предгорьях Тимана», [[1948]]).
 * Паратов ([[Островский Александр Николаевич|Александр Островскийлöн]] «Бесприданница», [[1953]]). 
 * Ипполит ([[Погодин Николай Фёдорович|Николай Погодинлöн]] «Третья патетическая», [[1959]]). 
 * Попов ([[Потолицын И.И.|И.И. Потолицынлöн]] «Это было в Сыктывкаре», [[1967]]).
 * Герасим ([[Зорин Дмитрий Иванович|Дмитрий Зоринлöн]] «Вечный источник», [[1970]]) да мукöд.
+
+==Наградаяс ==
+* [[1971]] – сетісны [[Коми АССР-са народнӧй артист]] ним.
 
 ==Öшмöсъяс==
 * Клейн А. ''Рассыхаев В.Н.'' // Энциклопедия Республики Коми. Сыктывкар, [[1998]]. Т. 2.
