*Empty MediaWiki Message*

--- a/Жаков_Пальӧ_Кальӧ.mw
+++ b/Жаков_Пальӧ_Кальӧ.mw
@@ -1,27 +1,49 @@
-'''Жаков Пальӧ Кальӧ''' (''Пальэ Кале''; ''Палалей Кале''; ''Гара-морт'', {{lang-ru|Каллистрат Фалалеевич Жаков}}; 30.09.[[1866]] — 20.01.[[1926]]) чужис [[Вӧлӧгда губерния|Вӧлӧгда губерниялӧн]] Усть–Сысольск карбердса [[Давпон]] грездын (ӧнi [[Сыктывкар]]).
+[[Файл:Жаков К.Ф.jpg|250 px|right|thumb|Палалей Кале Жаковлы паметник Сыктывкарса [[Шӧр шойна (Сыктывкар)|Шӧр шойна]] вылын]]
 
-Велӧдчис Усть–Сысольскын уездса училищеын, помаліс [[Тотьма]] карын велӧдысьясӧс дасьтан семинария. Та бӧрын уджаліс [[Вятскӧй губерния|Вятскӧй губернияса]] Холуницкӧй заводын, вӧлі писарӧн [[Кӧрткерӧс|Кӧрткерӧсын]]. Водзӧ велӧдчис [[Вӧлӧгда]]са реальнӧй училищеын да [[Петыркар]]са вӧр институтын, недыр кад велӧдіс манастырын. 1896–ӧд воӧ пырис велӧдчыны [[Киев|Киевса]] университетӧ, сэсся вуджис Петербургсаӧ история–филология факультет вылӧ.
+'''Жаков Пальӧ Кальӧ''' (''Пальэ Кале''; ''Палалей Кале''; ''Гара-морт'', {{lang-ru|Каллистрат Фалалеевич Жаков}}; [[1866 во|1866]]–[[1926]]) – коми гижысь, мир пасьтала нималана философ.
 
-1901–ӧд воын помаліс университетсӧ да лои сэні велӧдысьӧн. Велӧдчигас пыдісянь туяліс коми йӧзлысь олӧмсӧ да лӧсьӧдіс научнӧй гижӧд. 1911–ӧд воӧ лои профессорӧн. 1908–ӧд воӧ академик [[Бехтерев Владимир Михайлович|В.М.Бехтерев]] корис К.Жаковӧс уджавны психо–неврологическӧй институтӧ. Велӧдіс сэні 1917–ӧд воӧдз. 1917–1926–ӧд воясӧ оліс [[Псков|Псковын]], Юрьевын ([[Тарту]], [[Эстония]]) да [[Рига|Ригаын]] ([[Латвия]]).
+== Олан туй ==
+* [[1866 во|1866]], [[30 кӧч|кöч тöлысь 30 лун]] – чужис [[Вӧлӧгда губерния|Вӧлӧгда губерниялӧн]] [[Усть–Сысольск]] карбердса [[Давпон]] грездын (ӧнi [[Сыктывкар]]).
+* [[1879 во|1879]] – помаліс Усть–Сысольскын уездса училищеын.
+* [[1884 во|1884]] – помаліс [[Тотьма]] карын велӧдысьясӧс дасьтан семинария. 
+* [[1885 во|1885]] – уджаліс [[Вятка губерния|Вятка губернияса]] Холуницкӧй заводын.
+* Вӧлі писарӧн [[Кӧрткерӧс|Кӧрткерӧсын]].
+*  Велӧдчис [[Вӧлӧгда]]са реальнӧй училищеын да [[1891 во|1891]] воö пырис велöдчыны [[Петыркар]]са вӧр институтö, но сьöкыд висьöм вöсна эновтіс, недыр кад велӧдіс манастырын. 
+* [[1896 во|1896]] – пырис велӧдчыны [[Киев|Киевса]] университетӧ физика-математика факультетö, а сэсся [[1897 во|1897]] воö вуджис история–филология факультет вылӧ.
+* [[1889 во|1889]]–[[1891]] – велöдчис [[Петербург]]са университетын да лои сэні велӧдысьӧн. Велӧдчигас пыдісянь туяліс коми йӧзлысь олӧмсӧ да лӧсьӧдіс туясян гижӧдъяс.
+* [[1911]] – лои профессорӧн. 
+* [[1908]]–ӧд воӧ академик [[Бехтерев Владимир Михайлович|В.М. Бехтерев]] корис К.Жаковӧс уджавны психо–неврологическӧй институтӧ. Велӧдіс сэні [[1917]]–ӧд воӧдз. 
+* [[1917]]–[[1926]] – оліс [[Псков|Псковын]], Юрьевын ([[Тарту]], [[Эстония]]) да [[Рига|Ригаын]] ([[Латвия]]).
+* [[1926]], [[20 тӧв шӧр|тöвшöр тöлысь 20 лун]] – К.Ф. Жаков куліс [[Рига]]ын, дзебисны Пӧкрӧв шойна вылӧ. 
+* [[1990]], [[19 ӧшым|öшым тöлысь 19 лун]] – К.Жаковлысь шойсö выльысь дзебисны Сыктывкарын [[Шӧр шойна (Сыктывкар)|Шӧр шойна]] вылö.
 
-К.Жаков гижис ёнджыкасö роч кыв вылын. Медводдза гижӧдъяссӧ — кывбуръяс, очеркъяс, висьтьяс вӧлі йӧзӧдӧма ХХ–ӧд нэм пуксигӧн Петербургын («Парма» небӧг лэдзанінын). Зэв тӧдчана да гижысьӧс паськыда нимӧдана уджъясӧн лоины «Сквозь строй жизни» (комиöн «Олöм бужöдъяс вомöн») повесьт да важся коми йӧзлӧн олӧм йылысь «Биармия» поэма.
+== Гижан удж ==
+К.Жаков гижис ёнджыкасö роч кыв вылын. Медводдза гижӧдъяссӧ – кывбуръяс, очеркъяс, висьтьяс вӧлі йӧзӧдӧма ХХ–ӧд нэм пуксигӧн Петербургын («Парма» небӧг лэдзанінын). Зэв тӧдчана да гижысьӧс паськыда нимӧдана уджъясӧн лоины «Сквозь строй жизни» (комиöн «Олöм бужöдъяс вомöн») повесьт да важся коми йӧзлӧн олӧм йылысь «Биармия» поэма. Жаковлысь гижöдъяссö бура донъялісны [[Максий Горький]], [[Блок Александр Александрович|Александр Блок]], [[Брюсов Валерий Яковлевич|Валерий Брюсов]] да мукöд.
 
-Куліс К.Ф.Жаков Ригаын, дзебисны Покровскӧй шойна вылӧ. 1990–ӧд воӧ выльысь дзебисны Сыктывкарын, [[Шӧр шойна (Сыктывкар)|Шӧр шойна]] выло.
+Кальö Жаков отсаліс Коми муысь петöм уна йöзлы, тшöтш и нималана социолог [[Сорокин Питирим Александрович|Питирим Сорокинлы]].
+
+Жаков вöлі пыдісянь мöвпалысь мортöн. Сылöн мöвпыс сöвмис материализм да атеизмсянь религиознöй мистицизмöдз. Сійö лöсьöдіс "'''лимитизм'''" философскöй велöдöм, кодлысь подувъяссö восьтіс нин аслас медводдза философскöй уджас «Теория переменного и предела в гносеологии и в истории познания» ([[1904]]). Унатор вöчис «художественно-философскöй критикаын». Тайö жанрас гижöма «Леонид Андреев и его произведения (Опыт философской критики)» ([[1909]]) да «Иван Карамазов. Попытка философского толкования романа Достоевского "Братья Карамазовы"» ([[1909]]) да мукöд удж.
 
 ==Гижӧдъяс==
+* Понятие предела в математике (с точки зрения логики). – СПб., [[1905]].
+* Принцип эволюции в гносеологии, метафизике и морали. – СПб., [[1906]].
+* О преподавании этики в средних учебных заведениях. – СПб., [[1908]].
+* Логика. С эволюционной точки зрения. – СПб., [[1912]].
+* Основы эволюционной теории познания (Лимитизм). – СПб., [[1912]].
+* Сквозь строй жизни. – СПб., [[1912]]—[[1914]]. Ч. 1-4;
+* Гипотеза, её природа и роль в науке и в философии. – Пг., [[1915]].
+* Лимитизм. Лекция 1 [Валк], [[1917]].
+* Учение о душе. – Юрьев, [[1917]].
+* Лимитизм: Единство наук, философии и религии. – [[Рига]], [[1929]].
 
-* Понятие предела в математике (с точки зрения логики). СПб., 1905;
-* Принцип эволюции в гносеологии, метафизике и морали. СПб., 1906;
-* О преподавании этики в средних учебных заведениях. СПб., 1908;
-* Логика. С эволюционной точки зрения. СПб., 1912;
-* Основы эволюционной теории познания (Лимитизм). СПб., 1912;
-* Сквозь строй жизни. СПб., 1912—1914. Ч. 1-4;
-* Гипотеза, её природа и роль в науке и в философии. Пг., 1915;
-* Лимитизм. Лекция 1 [Валк], 1917;
-* Учение о душе. Юрьев, 1917;
-* Лимитизм: Единство наук, философии и религии. Рига, 1929.
+== Öшмöсъяс ==
+* Канев С. Каллистрат Жаков: Жизнь и судьба. – [[Сыктывкар]], [[1990]].
+* Русская философия: Энциклопедия / Под общ.ред. М. А. Маслина. – М.: Алгоритм, [[2007]]. – С.171.
+* Kovalchuk S. Kalistrat Zhakov. Ideas of Limit Philosophy. – Proceedings of the Latvian Academy of Sciences, Section A, 1999, vol. 53, N 4/5/6/, pp.74–78 (латвия кывйöн).
+
 [[Категория:Персоналия:Коми]]
 [[Категория:Персоналия анбурӧд]]
+[[Категория:Коми гижысь]]
 
 [[fi:Kallistrat Žakov]]
 [[ru:Жаков, Каллистрат Фалалеевич]]
