*Empty MediaWiki Message*

--- a/Рассыхаев.mw
+++ b/Рассыхаев.mw
@@ -1,6 +1,6 @@
-'''Рассыхаев'''  - коми йӧз пӧвстын тшӧкыда паныдасьлысь ов, Рассыхаевъясыс унаӧнӧсь [[Кулӧмдiн]] [[сикт]]ын.
+'''Рассыхаев'''  – коми йӧз пӧвстын тшӧкыда паныдасьлысь ов, Рассыхаевъясыс унаӧнӧсь [[Кулӧмдiн]] [[сикт]]ын.
 
-Тайö овыс Роч муысь локтöм мортлöн. [[1678]] воын [[Серёгов]]ын, сов вöчанiнын, аслас керкаын овлöма дорччысь (кузьнеч) «Иван Михайлов сын Рассыхаев», кодлöн вöлöма 12 арöса Якушка да 5 арöса Васька пиян. Гижалан небöгас пасйöма, мый сiйö воöма [[Совдор]]ысь ({{lang-ru|Соль Вычегодская}}). 
+Тайö овыс Роч муысь локтöм мортлöн. [[1678 во|1678]] воын [[Серёгов (Княжпогост район)|Серёговын]], сов вöчанiнын, аслас керкаын овлöма дорччысь (кузьнеч) «Иван Михайлов сын Рассыхаев», кодлöн вöлöма 12 арöса Якушка да 5 арöса Васька пиян. Гижалан небöгас пасйöма, мый сiйö воöма [[Совдор]]ысь ({{lang-ru|Соль Вычегодская}}). 
 
 [[Коми фольклор]] [[туялысь]] [[Плесовский Фёдор Васильевич|Плесовский Ф.В.]] "Комиын овъяс" небӧгын гижӧма, мый овыс артмöма «рассохнуть» роч кывйысь, вежöртасыс «косьмыны».
 
@@ -9,12 +9,12 @@
 Öти вужъя овöн лоö ''Рассохин''. 
 
 == Нималана йöз ==
-* [[Рассыхаев Иван Степанович]] (чужис [[1878]], [[16 вӧльгым|вӧльгым 16]] лунӧ, [[Кулӧмдiн]] - кувсис [[1968]] воӧ, [[16 тӧв шӧр|тӧвшӧр 16]] лунӧ, [[Кулӧмдiн]]) – [[коми гижысь]].
-* [[Рассыхаев Василий Николаевич]] (чужис [[1922]], [[20 моз|моз 20]] лунӧ, [[Кулӧмдiн]] – кувсис [[1990]], [[19 вӧльгым|вӧльгым 19]] лунӧ, [[Сыктывкар]]) – коми актер, Коми АССР-са народнöй артист ([[1971]]).
-* [[Рассыхаев Иван Егорович]] (чужис [[1906]], [[6 кос му|косму 6]] лунö, Кулӧмдiн - ?) -  Коми АССР-са просвещение министр ([[1947]]-[[1951]]).
-
+* [[Рассыхаев Иван Степанович]] ([[1878 во|1878]], [[16 вӧльгым|вӧльгым тӧлысь 16 лун]], [[Кулӧмдiн]] – [[1968]], [[16 тӧв шӧр|тӧвшӧр тӧлысь 16 лун]], [[Кулӧмдiн]]) – [[коми гижысь]].
+* [[Рассыхаев Василий Николаевич]] ([[1922]], [[20 моз|моз тӧлысь 20 лун]], [[Кулӧмдiн]] – [[1990]], [[19 вӧльгым|вӧльгым тӧлысь 19 лун]], [[Сыктывкар]]) – коми актёр, Коми АССР-са народнöй артист ([[1971]]).
+* [[Рассыхаев Иван Егорович]] ([[1906]], [[6 кос му|косму тӧлысь 6 лун]], [[Кулӧмдiн]] – ?) – Коми АССР-са просвещение министр ([[1947]]-[[1951]]).
+* [[Рассыхаев Денис Александрович]] ([[1981]], [[Зеленеч (Сыктывдін район)|Зеленеч]]) – В.Савин нима Драма театрын ворсысь.
 
 == Ӧшмӧсъяс ==
-* ''Плесовский Ф.В.'' Комиын овъяс / Сост. [[Жеребцов Игорь Любомирович|''И.Л. Жеребцов'']]. - [[Сыктывкар]], [[1997]]. - 141 с.
+* [[Плесовский Фёдор Васильевич|Плесовский Ф.В.]] Комиын овъяс / Сост. [[Жеребцов Игорь Любомирович|''И.Л. Жеребцов'']]. – [[Сыктывкар]], [[1997]]. – 141 с.
 
 [[Категория:Коми овъяс]]
