*Empty MediaWiki Message*

--- a/Санго_(кыв).mw
+++ b/Санго_(кыв).mw
@@ -1,4 +1,4 @@
-'''Санго''' (''yângâ tî sängö'' [jáŋɡá tí sāŋɡō]) - Шӧр Африкаса Республикаын, Чадын да Конго Демократия Республикаын креол кыв, Шӧр Африкаса Республикалӧн португалкӧд официал кыв. Анбур - латин.
+'''Санго''' (''yângâ tî sängö'' [jáŋɡá tí sāŋɡō]) - Шӧр Африкаса Республикаын, Чадын да Конго Демократия Республикаын креол кыв, Шӧр Африкаса Республикалӧн [[Франс кыв|франскӧд]] официал кыв. Анбур - латин.
 
 == Санго анбур ==
 
@@ -77,6 +77,35 @@
 Сідзжӧ: <big>ä, ë, ï, ö, ü, â, ê, î, ô, û, kp, gb, mb, mv, nd, ng, ngb, nz</big>
 
 '''C, J, Q, X''' сӧмын ас нимъясын.
+
+== Пример (Шӧр Африкаса Республикалӧн кып) ==
+
+E Zîngo
+
+:Bêafrîka, mbeso tî âBantu
+
+:Kîri mo gbû gîgî tî mo-mvenî
+
+:Mo bâa pâsi na gbe tî âzo kûê
+
+:Me fadësô, mo ke na kürü gô
+
+:Mo sö benda, mo bûngbi kûê ôko
+
+:Na kusâra ngâ na nëngö-terê
+
+:Tî tö ndâ tî finî dutï tî ë sô
+
+:E mä gbegô tî-âkötarä tî ë
+
+
+:E gbû kua nzönî na nëngö-terê
+
+:E kpë ndiä nzönî na mängö-terê
+
+:E kinda wasïöbê, ë tomba pâsi
+
+:E yâa bandêra tî ködrö tî ë!
 
 == Ыстӧдъяс ==
 
