--- a/Джиан.mw
+++ b/Джиан.mw
@@ -26,7 +26,7 @@
 * [[Ракин Анатолий Николаевич|Ракин А.]] Истан // [[Би кинь]], [[2010 во]]. 5 №.
 * Республика Коми: Энциклопедия: В 3-х т. Сыктывкар, [[2000]]. Т. 2.
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[ba:Үрмәлсек турғай]]
 [[bg:Горска зидарка]]
