*Empty MediaWiki Message*

--- a/Жонь.mw
+++ b/Жонь.mw
@@ -28,7 +28,7 @@
 == Öшмöс ==
 Республика Коми: Энциклопедия: В 3-х т. Сыктывкар, 2000. Т. 3.
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[als:Gimpel (Vogel)]]
 [[ba:Ҡыҙылтүш]]
