*Empty MediaWiki Message*

--- a/Истан.mw
+++ b/Истан.mw
@@ -1,7 +1,7 @@
 '''Истан''' ({{lang-la|Actitis hypoleucos}}, {{lang-ru|перевозчик}}) – куликъяслöн котырö пырысь шöрпöлöс [[лэбач]]. 
 
 == Ыджда ==
-Тушаыс весьтысь неуна кузьджык, сьöктаыс овлывлö 74 граммöдз. Вöсни нырыс юрсьыс кузь. Та вöсна удмурт кывйын лэбачыслöн нимыс кузьныр. 
+Тушаыс весьтысь неуна кузьджык, сьöктаыс овлывлö 74 граммöдз. Вöсни нырыс юрсьыс кузь. Та вöсна [[удмурт кыв]]йын лэбачыслöн нимыс ''кузьныр''. 
 == Рöм ==
 Лыа рöмысь рудовджык, истанлöн мышкуыс турунвиж сора, вомöнöн вöсньдик чукля визьясöн серöдлöма. Кынöм улыс еджыд, кокыс вижов, синмыс перкаль.
 == Паськалöм ==
@@ -15,7 +15,7 @@
 == Тöвйöм ==
 [[Моз тöлысь]] пуксьöм бöрын истанъяс эновтöны чужанiнсö да лэбзьöны шоныд муяслань. Тöвйöны найö [[Африка]]ын, [[Азия]] лунвылын да [[Австралия]]ын. 
 == Рöдвуж кыв вылын ==
-[[Перымса комияс]] лэбачсö шуöны комияс моз жö ''истанöн'', [[удмуртъяс]] шуöны ''кузьныр''. Коми нимъясыс тöдчöдöны сылысь шыалан аслыспöлöслунсö.
+[[Коми пермякъяс|Перымса комияс]] лэбачсö шуöны комияс моз жö ''истанöн'', [[удмуртъяс]] шуöны ''кузьныр''. Коми нимъясыс тöдчöдöны сылысь шыалан аслыспöлöслунсö.
 == А. Ракинлöн казьтылöмъясысь ==
 Ичöтдырйи, школаын велöдчигöн на, ачым аддзылi татшöмтор: ыджыд [[рака]] уськöдчис истан вылö, кöсйис ловсö босьтны сылысь. И рам лэбачыдлы быть лои юö пырны да пондыны сунавны-сайласьны, мый отсалiс мездмыны «шышкыдлöн» ёсь гыжъясысь.
 
@@ -23,7 +23,7 @@
 * [[Ракин Анатолий Николаевич|Ракин А.]] Истан // [[Би кинь]], [[2010 во]]. 6 №.
 * Республика Коми: Энциклопедия: В 3-х т. Сыктывкар, [[2000]]. Т. 2.
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[ba:Тебет]]
 [[bg:Късокрил кюкавец]]
