*Empty MediaWiki Message*

--- a/Каля.mw
+++ b/Каля.mw
@@ -1,9 +1,9 @@
 [[Файл:Lachmoewe2cele4.jpg|thumb|300px|Каля]]
-'''Каля''' ({{lang-la|Laridae}}) тайӧ [[лэбач]].
+'''Каля''' ({{lang-la|Laridae}}; {{lang-ru|чайка}}) тайӧ [[лэбач]].
 
 {{Stub}}
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[ar:نورس]]
 [[az:Qağayılar]]
