*Empty MediaWiki Message*

--- a/Кутш.mw
+++ b/Кутш.mw
@@ -1,9 +1,9 @@
 [[Файл:GoldenEagle-Nova.jpg|thumb|300px|Кутш]]
-'''Кутш''' ({{lang-la|Aquila}}) тайӧ [[лэбач]].
+'''Кутш''' ({{lang-la|Aquila}}; {{lang-ru|орёл}}) тайӧ [[лэбач]].
 
 {{Stub}}
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[vep:Pähkim]]
 
