*Empty MediaWiki Message*

--- a/Кырныш.mw
+++ b/Кырныш.mw
@@ -1,14 +1,9 @@
 [[Файл:Corvus corax (FWS).jpg|thumb|300px|Кырныш]]
-'''Кырныш''' ({{lang-la|Corvus corax}}) тайӧ [[лэбач]].
+'''Кырныш''' ({{lang-la|Corvus corax}}; {{lang-ru|Ворон}}) тайӧ [[лэбач]].
 
 {{Stub}}
 
-[[Категория:Лэбачъяс]]
-
-{{Link FA|en}}
-{{Link FA|hu}}
-{{Link FA|sv}}
-{{Link GA|zh}}
+[[Категория:Лэбачьяс]]
 
 [[als:Kolkrabe]]
 [[an:Corvus corax]]
