*Empty MediaWiki Message*

--- a/Пелыськай.mw
+++ b/Пелыськай.mw
@@ -2,7 +2,7 @@
 
 '''Пелыськай''' ({{lang-la|Turdus pilaris}}, {{lang-ru|Ряби́нник}}) - [[Европа]]ын олысь [[лэбач]].
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[az:Turdus pilaris]]
 [[ba:Мышар барҡылдағы]]
