*Empty MediaWiki Message*

--- a/Пинькай.mw
+++ b/Пинькай.mw
@@ -1,11 +1,11 @@
-'''Пинькай''' ({{lang-la|Fringilla montifringilla}}, {{lang-ru|юрок, вьюрок}}) – вöрса лэбач, неуна ыджыдджык [[пышкай]]ысь. 
+'''Пинькай''' ({{lang-la|Fringilla montifringilla}}, {{lang-ru|юрок, вьюрок}}) – вöрса [[лэбач]], неуна ыджыдджык [[пышкай]]ысь. 
 
 == Ыджда ==
 Кузьтаыс 14-18 сантиметр, сьöктанас овлывлö 25 граммöдз. 
 == Рöм ==
 Юрыс, сьылiыс, мышкуыс да борд шöрыс югъялана сьöд рöма. Морöс улысладорыс, туша бокыс, кынöмыс, бöж вевдорыс еджыд. Морöс вылысладорыс, бöж йывъясыс гöрдов. Ён нырыс да синмыс сьöдов, кокыс рудов. 
 == Паськалöм ==
-Паныдасьлö вöра местаясын Скандинавия] муяссянь Камчаткаöдз. Миянын олö [[парма]] пасьтала. Поздысьö [[Печора]] ковтысын тундраöдз, а сiдзжö [[Войвыв Урал]]ын, [[Удора]]ын, [[Эжва]] катыдын, [[Летка ю]] вожын да мукöдлаын. 
+Паныдасьлö вöра местаясын Скандинавия муяссянь Камчаткаöдз. Миянын олö [[парма]] пасьтала. Поздысьö [[Печора]] ковтысын тундраöдз, а сiдзжö [[Войвыв Урал]]ын, [[Удора]]ын, [[Эжва]] катыдын, [[Летка ю]] вожын да мукöдлаын. 
 == Оланін да поздйысьöм ==
 Радейтö васöд [[ньыв|ньыв пу]]а-козъяинъяс. Позъяснысö пинькайяс век тэчöны [[кыдз]], [[коз]], [[пожӧм]] да мукöд сикас пу вылö, мусяньыс нёль-ö-вит метр вылнаö. Найö гöгрöс сяр кодьöсь, кодлöн вылысладорыс джынвыйöдзыс восьса. Пöжны пуктöны вит-ö-квайт посньыдик [[кольк]]. Рöмыс налöн вижов вевъя, ичöтик чутъясöн серöдöма. Борд йылö кыпöдчöм да верстяммыштöм бöрын пинькайпиян öтвывтчöны [[кельӧб]]ъясö да дыр на лэбалöны чужанiн гöгöртас [[вӧр]]ъясын. 
 == Сёян ==
@@ -15,14 +15,14 @@
 == Гортын видзöм ==
 Кыдзи висьталöны лэбачьяслысь олöм-вылöмсö бура тöдысьяс, пинькайяс оз туйны гортын видзöм вылö. Найö зэв полысьöсь, öтдортöны йöзöс да оз сетчыны мевйöдны. Нöшта и сьыланногыс пö тайö кайясыслöн абу зэв мича.
 == Рöдвуж кыв вылын ==
-Перымса комияс тылабордасö миян моз жö шуöны пинькайöн. Кыдзи аддзам, важ коми йöз нимсö сетiгöн мыджсьöмаöсь сылöн чуксасян шыясыслöн аслыспöлöслун вылö. [[Удмурт]]ъяслöн кывворын татшöм нимыс абу. Найö шуöны лэбачсö ас ногыс: тэль куака, мый лоö, комиöдны кö, вöрса рака.
+[[Коми пермякъяс|Перымса комияс]] тылабордасö миян моз жö шуöны ''пинькайöн''. Кыдзи аддзам, важ коми йöз нимсö сетiгöн мыджсьöмаöсь сылöн чуксасян шыясыслöн аслыспöлöслун вылö. [[Удмуртъяс]]лöн кывворын татшöм нимыс абу. Найö шуöны лэбачсö ас ногыс: ''тэль куака'', мый лоö, комиöдны кö, вöрса рака.
 == Художествоа гижöдын ==
 «Пинь-пинь... пинь-пинь!..» – кытöнкö коз йылын, кылö, тешкöдчö-пинясьö кöдзыдкöд пинькай, коль гылöдiгтырйи. Тадзи гижö [[Чисталёв Тима Вень|Тима Вень]] [[1919]] вося дженьыдик «Во гöгöр кытшовтöм» висьтын, кöнi сёрниыс мунö войвывса лэбачьяслöн сьылöм да чуксасьöм йылысь.
 == Öшмöс ==
-* [[Ракин Анатолий Николаевич|Ракин А.]] Пинькай // [[Би кинь]], 2010. 7 №.
-* Республика Коми: Энциклопедия: В 3-х т. Сыктывкар, 2000. Т. 1.
+* [[Ракин Анатолий Николаевич|Ракин А.Н]] Пинькай // [[Би кинь (журнал)|Би кинь]], [[2010]]. 7 №.
+* Республика Коми: Энциклопедия: В 3-х т. [[Сыктывкар]], [[2000]]. Т. 1.
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[ar:شرشور]]
 [[ba:Аҡбауыр турғай]]
