*Empty MediaWiki Message*

--- a/Пыста.mw
+++ b/Пыста.mw
@@ -1,9 +1,9 @@
 [[Файл:Parus caeruleus small.jpg|thumb|300px|Пыста]]
-'''Пыста''' ({{lang-la|Paridae}}) тайӧ [[лэбач]].
+'''Пыста''' ({{lang-la|Paridae}}; {{lang-ru|Синица}}) тайӧ [[лэбач]].
 
 {{Stub}}
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[ang:Māse]]
 [[az:Arıquşlar]]
