*Empty MediaWiki Message*

--- a/Сизь.mw
+++ b/Сизь.mw
@@ -1,9 +1,9 @@
 [[Файл:Sphyrapicus variusPCSL11319B.jpg|thumb|300px|Сизь]]
-'''Сизь''' ({{lang-la|Picidae}}) тайӧ [[лэбач]].
+'''Сизь''' ({{lang-la|Picidae}}; {{lang-ru|Дятел}}) тайӧ [[лэбач]].
 
 {{Stub}}
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[ar:نقار الخشب]]
 [[az:Ağacdələnlər]]
