--- a/Сюзь.mw
+++ b/Сюзь.mw
@@ -1,9 +1,9 @@
 [[Файл:Northern_Spotted_Owl.USFWS-thumb.jpg|thumb|300px|Сюзь]]
-'''Сюзь''' ({{lang-la|Striges}}) тайӧ [[лэбач]].
+'''Сюзь''' ({{lang-la|Striges}}; {{lang-ru|Сова}}) тайӧ [[лэбач]].
 
 {{Stub}}
 
-[[Категория:Лэбачъяс]]
+[[Категория:Лэбачьяс]]
 
 [[ang:Ūle]]
 [[ar:بوميات]]
