--- a/Штип_кыв.mw
+++ b/Штип_кыв.mw
@@ -1,4 +1,4 @@
-[[Файл:Albanian language map.jpg|thumb|350px]]
+[[Файл:Distribution map of the Albanian language.jpg|thumb|350px]]
 '''Штип кыв''' (''gjuha shqipe''), сідзжӧ '''албан кыв''' — тайӧ палеобалкан кыв, каналан [[Албания|Албанияын]] да [[Косово|Косовоын]], официал [[Черногория|Черногориялӧн]] да [[Македония Республика|Македониялӧн]] регионъясын.
 
 == Штип анбур ==
