*Empty MediaWiki Message*

--- a/Хири-моту_(кыв).mw
+++ b/Хири-моту_(кыв).mw
@@ -1,4 +1,4 @@
-'''Хири-моту''' () - малай-полинезия креол кыв, Папуа-Выль Гвинеялӧн [[Англия кыв|англиякӧд]] да [[Ток писин (кыв)|ток писинкӧд]] официал кыв. Анбур - латин.
+'''Хири-моту''' (''Hiri Motu'') - малай-полинезия креол кыв, Папуа-Выль Гвинеялӧн [[Англия кыв|англиякӧд]] да [[Ток писин (кыв)|ток писинкӧд]] официал кыв. Анбур - латин.
 
 == Хири-моту анбур ==
 
@@ -75,7 +75,7 @@
 {{Stub}}
 
 [[Категория:Кыв]]
-[[Категория:Малай-полинезия кывъяс]]
+[[Категория:Австронезия кывъяс]]
 [[Категория:Креол да пиджин кывъяс]]
 
 [[als:Hiri Motu]]
