*Empty MediaWiki Message*

--- a/Лужиков_Александр_Михайлович.mw
+++ b/Лужиков_Александр_Михайлович.mw
@@ -1,8 +1,8 @@
 [[Файл:Лужиков А.М.jpg|250 px|right|thumb|Лужиков А.М. (1964–2006) – коми гижысь]]
-'''Лужиков Александр Михайлович''' ([[1964]]–[[2006]]]) – коми поэт, [[Россияса Гижысь котыр]]ö пырысь.
+'''Лужиков Александр Михайлович''' ([[1964]]–[[2006]]) – коми поэт, [[Россияса Гижысь котыр]]ö пырысь.
 
 == Олан туй ==
-* [[1964]] [[19 рака|рака тöлысь 19 лун]]– чужис [[Коми АССР]]-ын [[Кулӧмдiн район|Кулӧмдін районса]] [[Кекур (Кулӧмдiн район)|Кекур]] [[грезд]]ын.
+* [[1964]] [[19 рака|рака тöлысь 19 лун]] – чужис [[Коми АССР]]-ын [[Кулӧмдiн район|Кулӧмдін районса]] [[Кекур (Кулӧмдiн район)|Кекур]] [[грезд]]ын.
 * помалiс И.А. Куратов нима 1 №-а Сыктывкарса педагогика училищеысь художествоа графика юкöн.
 * служитiс армияын. 
 * помалiс [[Москва]]ын [[Горький нима Литература институт]].
@@ -10,11 +10,11 @@
 * [[1991]] – пырис Россияса Гижысь котырö.
 * [[2006]] – редакторалiс [[Би кинь (журнал)|«Би кинь»]] журналлöн юкöнöн.
 * [[1992]] – [[Би кинь (журнал)|«Би кинь»]] журналса шöр редактор.
-* [[2006]] – кувсис. Кулан луныс да гуыс абу тöдса. Рöдвужыс тöдмалiс кувсьöм йывсьыс [[2009]] воын. Гуалöма кыдзи нимтöм-рöдвужöт морт [[Вылыс Човса шойна]] вылын 13 №-а участок вылын. 
+* [[2006]] – кувсис. Кулан луныс да гуыс абу тöдса. Рöдвужыс тöдмалiс кувсьöм йывсьыс [[2009]] воын. Гуалöма кыдзи нимтöм-рöдвужтöм морт [[Вылыс Човса шойна]] вылын 13 №-а участок вылын. 
 == Гижан удж ==
 Александр Лужиковлöн медводдза кывбуръяс петiсны [[1970]]-öд вояс помын. Сiйö ветлiс том гижысьяслöн IX Ставсоюзса совещание вылö. Бура донъялiсны сылысь кывбуръяссö роч поэт Егор Исаев да Коми Республикаса народнӧй гижысь [[Юшков Толь Гень|Геннадий Юшков]]. «Йиркап» йылысь поэмаын кылö чужан лун да рöдвуж йылысь тöжд.
 
-Гижöдъясыс петавлiсны [[Литературная газета|«Литературнöй газетын»]], [[Литературная Россия (газета)|«Литературнöй Россияын»]], [[Север (журнал)|«Север»]] журналыг. 
+Гижöдъясыс петавлiсны [[Литературная газета|«Литературнöй газетын»]], [[Литературная Россия (газета)|«Литературнöй Россияын»]], [[Север (журнал)|«Север»]] журналын. 
 
 Поэт бура петкöдчис драматургия жанрын. Гижис «Ыджыд висьöм» пьеса (йöзöдöма: [[Арт (журнал)|«Арт»]] журнал, [[1997]] во, 1 №.).
 Сылысь кывбуръяссö вуджöдлiсны Елена Исаева, Александр Кувакин, Сергей Филатов.
