*Empty MediaWiki Message*

--- a/Фёдоров_Геннадий_Александрович.mw
+++ b/Фёдоров_Геннадий_Александрович.mw
@@ -2,12 +2,22 @@
 
 ==Олан туй==
 * [[1909]], [[18 моз|моз тӧлысь 27 лун]] – чужис [[Вӧлӧгда губерния]]ын [[Усть-Сысольск уезд]]са [[Мылдiн]] [[вӧлӧсьт]]ын (ӧнi – [[Коми Республика]]са [[Мылдiн]] [[сикт]]).
-* [[1991]], [[2 тӧв шӧр|тӧвшӧр тӧлысь 21 лун]] – кувсис [[Сыктывкар]]ын.
+* [[1926]] – помаліс [[Кулӧмдін]]са 2-ӧд тшупӧда школа.
+* [[1940]] – помаліс заочнӧя [[Горький нима Литература институт]].
+* [[1948]]–[[1959]], [[1964]]–[[1971]] – веськӧдліс Коми гижысь котырӧн.
+[[Файл:Фёдоров Г.А. Гу.jpg|250 px|right|thumb|Коми гижысь Г.А. Фёдоров гу вылын казьтылан пас]]
+* [[1991]], [[2 тӧв шӧр|тӧвшӧр тӧлысь 2 лун]] – кувсис [[Сыктывкар]]ын, дзебӧма карса [[Шӧр шойна (Сыктывкар)|Шӧр шойна]] вылӧ.
 
+== Гижан удж==
+
+== Небӧгъяс ==
+=== Комиӧн ===
+=== Рочӧн ===
+=== Вуджӧдӧм уджъяс ===
+=== Литература туялӧмъяс ===
 ==Öшмöсъяс==
-
-* История Коми литературы: В 3-х т.  / Под ред. [[Ванеев, Альберт Егорович|А.Е. Ванеева]], [[Мартынов Владимир Иванович|В.И. Мартынова]]. – Сыктывкар, [[1981]]. – Т. 3
-* [[Ванеева Ирина Михайловна|Ванеева И.]] ''Фёдоров Геннадий Александрович'' // Республика Коми: Энциклопедия: В 3-х т. – Сыктывкар: Коми кн. изд-во, [[2000]]. – Т. 3. – С. 240.
-
+* История Коми литературы: В 3-х т.  / Под ред. [[Ванеев, Альберт Егорович|А.Е. Ванеева]], [[Мартынов Валерий Иванович|В.И. Мартынова]]. – [[Сыктывкар]], [[1981]]. – Т. 3
+* [[Ванеева Ирина Михайловна|Ванеева И.]] ''Фёдоров Геннадий Александрович'' // Республика Коми: Энциклопедия: В 3-х т. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми кн. изд-во]], [[2000]]. – Т. 3. – С. 240.
+* [http://www.nbrkomi.ru/kk/base/raiony/troick/literatura/pisateli_i_poety/imya_razdela/ Коми Республикаса Национальнӧй библиотека]
 [[Категория:Персоналия:Коми‎]]
 [[Категория:Коми гижысь]]
