*Empty MediaWiki Message*

--- a/Копт_кыв.mw
+++ b/Копт_кыв.mw
@@ -241,7 +241,7 @@
 * [http://trilinguis.com/coptic/dictionary.htm Коптский словарь]
 
 [[Категория:Кыв]]
-[[Категория:Семит кывъяс]]
+[[Категория:Афразия кывъяс]]
 
 [[af:Kopties]]
 [[als:Koptische Sprache]]
