*Empty MediaWiki Message*

--- a/Хири-моту_(кыв).mw
+++ b/Хири-моту_(кыв).mw
@@ -7,8 +7,8 @@
 == Лыдакывъяс ==
 
 {| class="standard"
-|лыд
-|моту
+|'''лыд'''
+|'''моту'''
 |-
 |1 
 |ta
@@ -53,7 +53,7 @@
 |sinahu-ta
 |- 
 |101
-|sinahu-ta dikoana ta или sinahu-ta mai ta
+|sinahu-ta dikoana ta ''либӧ'' sinahu-ta mai ta
 |- 
 |300
 |sinahu-toi
