*Empty MediaWiki Message*

--- a/Тамазигхт_(кыв).mw
+++ b/Тамазигхт_(кыв).mw
@@ -5,7 +5,7 @@
 
 {| class="wikitable"
 |+ 
-! rowspan="2" | || colspan="2" | '''Латин''' || rowspan="2" | '''IRCAM''' || rowspan="2" | '''Араб''' || rowspan="2" | '''Шуанног''' 
+! rowspan="2" | || colspan="2" | '''Латин''' || rowspan="2" | '''Тифинаг''' || rowspan="2" | '''Араб''' || rowspan="2" | '''Шуанног''' 
 |-
 ! '''INALCO''' || '''Мӧд'''
 |-
