*Empty MediaWiki Message*

--- a/Тамазигхт_(кыв).mw
+++ b/Тамазигхт_(кыв).mw
@@ -1,5 +1,5 @@
 [[Файл:Central Atlas Tamazight - EN.PNG|мини]]
-'''Тамазигхт''' (ⵜⴰⵎⴰⵣⵉⵖⵜ ''Tamaziġt, Tamazight'' [tæmæˈzɪɣt], [θæmæˈzɪɣθ]) — тайӧ Мароккоын бербер кыв. Анбуръяс - латин, араб либӧ тифинаг.
+'''Тамазигхт''' (ⵜⴰⵎⴰⵣⵉⵖⵜ ''Tamaziġt, Tamazight'' [tæmæˈzɪɣt], [θæmæˈzɪɣθ]) — тайӧ Мароккоын бербер кыв, [[Араб кыв|арабкӧд]] официал кыв. Анбуръяс - латин, араб либӧ тифинаг.
 
 == Тамазигхт анбур ==
 
