*Empty MediaWiki Message*

--- a/Йемен.mw
+++ b/Йемен.mw
@@ -2,7 +2,7 @@
 |Коми ним=Йемен Республика
 |Оригинал ним=الجمهوريّة اليمنية<br /> ал-Джумхури́ййа ал-Йамани́ййа
 |Дӧрапас=Flag of Yemen.svg
-|Канпас=Yemen_Coat.jpg‎ 
+|Канпас=Coat of arms of Yemen.svg
 <!-- |Вместо герба= -->
 |Девиз=
 |Кып ним=Единая Республика
