*Empty MediaWiki Message*

--- a/Ӧтувтчӧм_Араб_Эмиратъяс.mw
+++ b/Ӧтувтчӧм_Араб_Эмиратъяс.mw
@@ -2,7 +2,7 @@
 |Коми ним=Ӧтувтчӧм Араб Эмиратъяс
 |Оригинал ним=الإمارات العربية المتحدة
 |Дӧрапас=Flag of the United Arab Emirates.svg
-|Канпас=Coat of arms of United Arab Emirates (1973-2008).png
+|Канпас= Coat of arms of the United Arab Emirates.svg
 <!-- |Вместо герба= -->
 |Девиз=Ен, Войтыр, Президент
 |Кып ним=
