*Empty MediaWiki Message*

--- a/Сорокин_Питирим_Александрович.mw
+++ b/Сорокин_Питирим_Александрович.mw
@@ -1,9 +1,9 @@
 [[Файл:Сорокин П.А.jpg|250 px|right|thumb|Сорокин Питирим Александрович (1889—1968) — нималана социолог, туялысь, коми этнограф]]
 
-'''Сорокин Питирим Александрович''' ([[1889]]—[[1968]]) — нималана социолог, коми этнограф да велöдысь.
+'''Сорокин Питирим Александрович''' ([[1889 во|1889]]—[[1968]]) — мир пасьтала нималана социолог, коми этнограф да велöдысь.
 
 == Олан туй ==
-* [[1889]], [[23 тӧв шӧр|тӧвшӧр 23 лун]] — чужис Кардор губернияын Яренск уездса Туръя сиктын (ӧні — [[Коми Республика]]ысь [[Княжпогост район]]са [[Туръя]] [[сикт]]).
+* [[1889 во|1889]], [[23 тӧв шӧр|тӧвшӧр 23 лун]] — чужис [[Кардор губерния]]ын [[Яренск уезд]]са Туръя вöлöсьтын (ӧні — [[Коми Республика]]ысь [[Княжпогост район]]са [[Туръя (Княжпогост район)|Туръя]] [[сикт]]).
 * [[1904]] — помаліс [[Гам (Емдiн район)|Гам]] сиктса кык класса школа.
 * Велöдчис [[Кострома обласьт|Кострома губерния]]са Хреново сиктын вичкоса велöдысьяслöн семинарияын.
 * Велöдчис Петербургын психоневрологическöй институтын, а сэсся вуджис Петербургса университет да помаліс сійöс.
