*Empty MediaWiki Message*

--- a/Бубрих_Дмитрий_Владимирович.mw
+++ b/Бубрих_Дмитрий_Владимирович.mw
@@ -1,8 +1,8 @@
-'''Бубрих Дмитрий Владимирович''' ([[1890]]–[[1949]]) – СССР-ын финн-йӧгра туялӧмъяслы подув пуктысьяс пиысь ӧти, коми кыв [[туялысь]], филология наукаясса доктор, профессор, СССР-са наукаяс академияын член-корреспондент.
+'''Бубрих Дмитрий Владимирович''' ([[1890 во|1890]]–[[1949]]) – СССР-ын финн-йӧгра туялӧмъяслы подув пуктысьяс пиысь ӧти, [[коми кыв]] [[туялысь]], филология наукаясса доктор, профессор, [[СССР-са наукаяс академия]]ын член-корреспондент.
 
 ==Олан туй==
-* [[1890]], [[25 сора|сора тӧлысь 13 (25) лун]] – чужис [[Петыркар|Санкт-Петербургын]].
-* [[1941]]–[[1944]] – вӧлі [[Сыктывкар]]ын эвакуацияын, велӧдіс эвакуируйтӧм Петрозаводскса университетын да Коми канму педагогика институтын. 
+* [[1890 во|1890]], [[25 сора|сора тӧлысь 13 (25) лун]] – чужис [[Петыркар|Санкт-Петербургын]].
+* [[1941]]–[[1944]] – вӧлі [[Сыктывкар]]ын эвакуацияын, велӧдіс эвакуируйтӧм Петрозаводскса университетын да [[Коми канму педагогика институт]]ын. 
 * [[1949]], [[30 вӧльгым|вӧльгым тӧлысь 30 лун]] – кувсис [[Петыркар|Ленинградын]].
 
 ==Ӧшмӧс==
