--- a/Рогов_Николай_Абрамович.mw
+++ b/Рогов_Николай_Абрамович.mw
@@ -1,4 +1,7 @@
-'''Рогов Ӧврам Микӧл''' ({{lang-ru|Рогов Николай Абрамович}}) ([[1825]]–[[1905]]) вӧлі лесникӧн Строгановскӧй именнёын Иньвенскӧй дача вылын. Сія осьтіс туй [[Коми-Перым кыв]] велӧтӧм понда. Словарьыс вылын сія уджаліс [[1849]] восянь, а [[1860]] годӧ петіс грамматика «Опыт грамматики пермяцкого языка» Микӧл Роговлӧн.
+'''Рогов Николай Абрамович''' ({{lang-koi|Рогов Ӧврам Микӧл}}) ([[1825 во|1825]]–[[1905]]) – [[перым коми кыв]] туялысь.
+
+* Лесникаліс Строганов именьеын Иньваса дачаын. 
+* Пуктіс ыджыд пай [[перым коми кыв]] велӧдӧмö. [[1849 во|1849]] восянь дасьтіс кывкуд, а [[1860 во|1860]] воӧ сылöн петіс «Опыт грамматики пермяцкого языка» небöг.
 
 [[Категория:Персоналия анбурӧд]]
 
