*Empty MediaWiki Message*

--- a/Тамашек_(кыв).mw
+++ b/Тамашек_(кыв).mw
@@ -170,6 +170,7 @@
 
 == Ыстӧдъяс ==
 
+* [http://www.quivira-font.com/Тифинаг шрифт]
 * [http://www.omniglot.com/writing/tuareg.htm Омниглот]
 
 {{Stub}}
