*Empty MediaWiki Message*

--- a/Тамазигхт_(кыв).mw
+++ b/Тамазигхт_(кыв).mw
@@ -78,6 +78,7 @@
 
 == Ыстӧдъяс ==
 
+* [http://www.quivira-font.com/Тифинаг шрифт]
 * [http://www.centrederechercheberbere.fr/tamazit.html INALCO report on Central Atlas Tamazight]
 * [http://archive.phonetics.ucla.edu/Language/TZM/tzm.html UCLA Archive for Tamazight]
 * [http://wals.info/languoid/lect/wals_code_bma Berber (Middle Atlas)]
