*Empty MediaWiki Message*

--- a/1898-ӧд_во.mw
+++ b/1898-ӧд_во.mw
@@ -1,4 +1,4 @@
-'''1898 во''' — абу [[кассяна во]], [[Григорий календар]] серти пансьö [[пекнича]]сянь.
+'''1898 во''' — абу [[кассяна во]], [[Григорий календар]] серти пансьö [[субӧта]]сянь.
 
 == Лоӧмторъяс ==
 == Чужисны ==
