*Empty MediaWiki Message*

--- a/Мальта_кыв.mw
+++ b/Мальта_кыв.mw
@@ -3,7 +3,7 @@
 == Мальта анбур ==
 
 {|class="wikitable" cellpadding="3"
-!шыпас !! ним !! IPA !! араб аналог 
+!шыпас !! ним !! шуанног !! араб аналог 
 |-
 |''' A a '''||a ||a||align=right|ـَ ، ـَا
 |-
