*Empty MediaWiki Message*

--- a/Туркменистан.mw
+++ b/Туркменистан.mw
@@ -2,7 +2,7 @@
 |Коми ним=Туркменистан
 |Оригинал ним={{lang|tk|Türkmenistan}}
 |Дӧрапас=Flag of Turkmenistan.svg
-|Канпас=Герб Туркменистана.gif
+|Канпас=Coat of Arms of Turkmenistan.svg
 <!-- |Вместо герба= -->
 |Девиз=
 |Кып ним=? ([[Туркмен кыв|туркмен]] Garaşsyz, bitarap, Türkmenistanyň döwlet gimni)
