*Empty MediaWiki Message*

--- a/1882-ӧд_во.mw
+++ b/1882-ӧд_во.mw
@@ -1,3 +1,4 @@
+{{Вояс|1882}}
 '''1882 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[вежалун]]сянь.
 
 == Лоӧмторъяс ==
@@ -6,6 +7,8 @@
 * [[3 вӧльгым|вӧльгым тöлысь 3 лун]] – [[белорус кыв|белорус]] гижысь, белорус литературалы подув пуктысь, туялысь [[Якуб Колас]] (куліс [[1956]])
 == Кулісны ==
 == Ӧшмӧс==
+
+[[Категория:1882 во]]
 
 [[af:1882]]
 [[am:1882 እ.ኤ.አ.]]
