*Empty MediaWiki Message*

--- a/1878-ӧд_во.mw
+++ b/1878-ӧд_во.mw
@@ -1,3 +1,5 @@
+{{Вояс|1878}}
+
 '''1878 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[воторник]]сянь.
 
 == Лоӧмторъяс ==
@@ -5,6 +7,9 @@
 == Чужисны ==
 * [[18 ӧшым|ӧшым тöлысь 18 лун]] – [[Сталин Иосиф Виссарионович|Иосиф Сталин]] (куліс [[1953]])
 == Кулісны ==
+== Ӧшмӧс ==
+
+[[Категория:1878 во]]
 
 [[af:1878]]
 [[am:1878 እ.ኤ.አ.]]
