*Empty MediaWiki Message*

--- a/1877-ӧд_во.mw
+++ b/1877-ӧд_во.mw
@@ -1,3 +1,5 @@
+{{Вояс|1877}}
+
 '''1877 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[выльлун]]сянь.
 
 == Лоӧмторъяс ==
@@ -5,6 +7,8 @@
 * [[22 йирым|йирым тӧлысь (10) 22 лун]] – [[коми гижысь]] [[Лебедев Микӧл Микайлӧ|Михаил Лебедев]] (куліс [[1951]]).
 == Кулісны ==
 == Ӧшмӧс==
+
+[[Категория:1877 во]
 
 [[af:1877]]
 [[am:1877 እ.ኤ.አ.]]
