*Empty MediaWiki Message*

--- a/1886-ӧд_во.mw
+++ b/1886-ӧд_во.mw
@@ -1,3 +1,5 @@
+{{Вояс|1886}}
+
 '''1886 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[пекнича]]ӧ.
 
 == Лоӧмторъяс ==
@@ -5,7 +7,7 @@
 * [[12 вӧльгым|вӧльгым тӧлысь 12 лун]] – [[Югдін]] да [[Сыктывкар|Усть-Сысольск]] костын восьтӧма телеграф визь. Сійӧс сувтӧдӧма Усть-Сысольскса земскӧй управа водзмӧстчӧм серти. Телеграф визь ӧшаліс 9 сюрс сюръя вылын. 
 
 == Чужисны ==
-* [[28 урасьӧм|урасьӧм 28 лун]] – кыв туялысь [[Фасмер, Макс|Макс Фасмер]], роч кывйысь этимология кывкуд дасьтысь (куліс [[1962]]).
+* [[28 урасьӧм|урасьӧм 28 лун]] – кыв туялысь [[Фасмер, Макс|Макс Фасмер]], [[роч кыв]]йысь этимология кывкуд дасьтысь (куліс [[1962]]).
 
 == Кулісны ==
 * [[14 лӧддза-номъя|лӧддза-номъя тӧлысь 14 лун]] – роч драматург [[Островский Александр Николаевич|Александр Островский]] (чужис [[1823 во|1823]]).
