*Empty MediaWiki Message*

--- a/1888-ӧд_во.mw
+++ b/1888-ӧд_во.mw
@@ -1,3 +1,5 @@
+{{Вояс|1888}}
+
 '''1888 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[вежалун]]сянь.
 
 == Лоӧмторъяс ==
@@ -5,6 +7,8 @@
 * [[21 вӧльгым|вöльгым тöлысь 21 лун]] – [[коми гижысь]] да драматург [[Савин Ӧльӧксей Виттор|Нёбдінса Виттор]] (куліс [[1943]])
 == Кулісны ==
 == Ӧшмӧс==
+
+[[Категория:1888 во]
 
 [[af:1888]]
 [[am:1888 እ.ኤ.አ.]]
