*Empty MediaWiki Message*

--- a/1888-ӧд_во.mw
+++ b/1888-ӧд_во.mw
@@ -1,6 +1,6 @@
 {{Вояс|1888}}
 
-'''1888 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[вежалун]]сянь.
+'''1888 во''' – [[кассяна во]], [[Григорий календар]] серти пансьӧ [[вежалун]]сянь.
 
 == Лоӧмторъяс ==
 == Чужисны ==
