--- a/1889-ӧд_во.mw
+++ b/1889-ӧд_во.mw
@@ -1,3 +1,5 @@
+{{Вояс|1889}}
+
 '''1889 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[воторник]]сянь.
 
 == Лоöмторъяс ==
@@ -6,6 +8,8 @@
 * [[20 кос му|косму тӧлысь 20 лун]] — [[Германия]]са канцлер ([[1933]]—[[1945]]) [[Гитлер, Адольф|Адольф Гитлер]] (куліс [[1945]]).
 * [[23 лӧддза-номъя|лӧддза-номъя тӧлысь 23 лун]] — роч кывбуралысь [[Ахматова Анна Андреевна|Анна Ахматова]] (куліс [[1966]]).
 == Кулісны ==
+
+[[Категория:1877 во]
 
 [[af:1889]]
 [[am:1889 እ.ኤ.አ.]]
