--- a/1889-ӧд_во.mw
+++ b/1889-ӧд_во.mw
@@ -9,7 +9,7 @@
 * [[23 лӧддза-номъя|лӧддза-номъя тӧлысь 23 лун]] — роч кывбуралысь [[Ахматова Анна Андреевна|Анна Ахматова]] (куліс [[1966]]).
 == Кулісны ==
 
-[[Категория:1877 во]
+[[Категория:1889 во]]
 
 [[af:1889]]
 [[am:1889 እ.ኤ.አ.]]
